--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/student-management
+MONGO_URI=mongodb+srv://keerthi24092212:jl4FANwjSMXlGKgs@cluster0.wgg82vz.mongodb.net/student-management
